fix: menu z-index 1000

--- a/src/packages/menuitem/menuitem.scss
+++ b/src/packages/menuitem/menuitem.scss
@@ -39,7 +39,7 @@
 .nut-menu-item__wrap-up {
   position: absolute;
   width: 100%;
-  z-index: 2052;
+  z-index: 1000;
   overflow: hidden;
 }
 
